functional Edit Profile

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -2,6 +2,9 @@
 
 <html lang="en">
 <head>
+	<div style="float: right">
+		<a href="/account/logout"> Log Out </a>
+	</div>
 	{% block head %}
 	<h1> Head </h1>
 	{% endblock %}
