--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -11,12 +11,18 @@
 
 {% block body %}
 
-	<h3> Hi {{ user.first_name }}</h3>
-	<p>Username: {{ user.username }}</p>
-	<p>Full Name: {{ user.fist_name }} {{ user.last_name }}</p>
-	<p>Email: {{ user.email }}</p>
+	<h3> Hi {{ profile.user.first_name }}</h3>
+	<p>Username: {{ profile.user.username }}</p>
+	<p>Full Name: {{ profile.user.fist_name }} {{ profile.user.last_name }}</p>
+	<p>Email: {{ profile.user.email }}</p>
+
+	<p>City: {{ profile.city }}</p>
+	<p>Description: {{ profile.description }}</p>
 
 	<h3> Your Designs </h3>
-	<p> TODO </p>
-
+	{% for post in posts %}
+		<p>Posted: {{ post.uploaded_at }}
+		<img style="max-width: 50%" src="{{ post.image.url }}">
+		<p class="description"> Description: {{ post.description }} </p>
+	{%endfor%}
 {% endblock %}
