--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-	<form method="post">
+	<form method="post" enctype="multipart/form-data">
 		{% csrf_token %}
 		{{ form.as_p }}
 		<button type="submit">Submit</button>
