--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -11,5 +11,6 @@
 		{{ form.as_p }}
 		<button type="submit"> Login </button>
 	</form>
+	<a href="/account/register">Or Register Here</a>
 
 {% endblock %}
