--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -4,6 +4,8 @@
 	<div style="float: right">
 		<a href="/account/logout"> Log Out </a>
 	</div>
+	<p> I'm defining this paragraph in Base.html</p>
+
 	{% block head %}
 	<h1> Head </h1>
 	{% endblock %}
