--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -8,6 +8,7 @@
 	<form method="post" enctype="multipart/form-data">
 		{% csrf_token %}
 		{{ form.as_p }}
+		{{ infoform.as_p }}
 		<button type="submit">Submit</button>
 	</form>
 {% endblock %}
