added toy CSS /static

--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -7,6 +7,7 @@
 <ul>
 	<li><a href="">My Designs</a></li>
 	<li><a href="">My Activity Feed</a></li>
+	<li><a href="/account/edit">Edit My Profile</a></li>
 </ul>
 {% endblock %}
 
