--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -1,6 +1,9 @@
 <!doctype html>
+{% load static %}
+
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="{% static 'css/app.css' %}" >
 	<div style="float: right">
 		<a href="/account/logout"> Log Out </a>
 	</div>
