--- a/account/templates/partials/headers-navigations/header-BP-logout.html
+++ b/account/templates/partials/headers-navigations/header-BP-logout.html
@@ -19,18 +19,8 @@
 			</div>
 		</form>
 
-		<div class="form--login-logout">
-			<form class="form-inline">
-				<div class="form-group">
-					<input class="form-control form-control-sm" type="text" placeholder="Username" value="" required>
-				</div>
-				<div class="form-group">
-					<input class="form-control form-control-sm" type="password" placeholder="Password" value="" required>
-				</div>
-				<button class="btn btn-primary btn-md-2">Login</button>
-			</form>
-			<a href="#" class="btn btn-primary btn-md-2 login-btn-responsive" data-toggle="modal" data-target="#registration-login-form-popup">Login</a>
-		</div>
+		<a href="/account/login" class="btn btn-primary btn-md-2" data-target="#registration-login-form-popup">Login</a>
+		<a href="/account/register" class="btn btn-primary btn-md-2" data-target="#registration-login-form-popup">Register</a>
 	</div>
 
 </header>
