--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -111,6 +111,8 @@
 
 	{% endblock %}
 
+
+
 	<!-- JS Scripts -->
 <script src="{% static 'js/jquery-3.2.1.js' %}"></script>
 <script src="{% static 'js/jquery.appear.js' %}"></script>
@@ -145,12 +147,23 @@
 <script src="{% static 'js/jquery.gifplayer.js' %}"></script>
 <script src="{% static 'js/mediaelement-and-player.js' %}"></script>
 <script src="{% static 'js/mediaelement-playlist-plugin.min.js' %}"></script>
-<script src="{% static 'js/sticky-sidebar.js"></script>
+<script src="{% static 'js/sticky-sidebar.js '}"></script>
 
 <script src="{% static 'js/base-init.js' %}"></script>
 <script defer src="{% static 'fonts/fontawesome-all.js' %}"></script>
 
 <script src="{% static 'Bootstrap/dist/js/bootstrap.bundle.js' %}"></script>
+
+<!-- Live Notification Updater -->
+{% load notifications_tags %}
+<script src="{% static 'notifications/notify.js' %}" type="text/javascript"></script>
+{% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' %}
+<!-- Clear notifications -->
+<script>
+	$('#clear-notifications').click(function() {
+		$.get("/inbox/notifications/api/unread_list?mark_as_read=true")
+	})
+</script>
 
 </body>
 </html>
