activity feed update

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -28,6 +28,9 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/main.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/fonts.min.css' %}">
 
+	<!-- My Styles -->
+	<link rel="stylesheet" type="text/css" href="{% static 'css/app.css' %}">
+
 	{% if user.is_authenticated %}
 		{% include 'partials/headers-navigations/header-BP.html' %}
 
@@ -158,10 +161,12 @@
 {% load notifications_tags %}
 <script src="{% static 'notifications/notify.js' %}" type="text/javascript"></script>
 {% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' %}
-<!-- Clear notifications -->
+<!-- Clear all notifications. Max 5 because 5 fit in the note box -->
 <script>
 	$('#clear-notifications').click(function() {
-		$.get("/inbox/notifications/api/unread_list?mark_as_read=true")
+		console.log("hit")
+		$.get("/inbox/notifications/api/unread_list?max=5&mark_as_read=true")
+		alert("cleared")
 	})
 </script>
 
