--- a/account/templates/partials/headers-navigations/top-header-profile.html
+++ b/account/templates/partials/headers-navigations/top-header-profile.html
@@ -8,7 +8,11 @@
 			<div class="ui-block">
 				<div class="top-header">
 					<div class="top-header-thumb">
-						<img src="img/top-header1.jpg" alt="nature">
+						{% if profile.banner %}
+						<img src="{{profile.banner.url}}" alt="header">
+						{% else %}
+						<img src="/media/profile_banner/default.png" alt="header">
+						{% endif %}
 					</div>
 					<div class="profile-section">
 						<div class="row">
@@ -35,7 +39,7 @@
 									</li>
 									<li>
 										<div class="more">
-											<svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg>
+											<svg class="olymp-three-dots-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg>
 											<ul class="more-dropdown more-with-triangle">
 												<li>
 													<a href="#">Report Profile</a>
@@ -52,15 +56,15 @@
 
 						<div class="control-block-button">
 							<a href="35-YourAccount-FriendsRequests.html" class="btn btn-control bg-blue">
-								<svg class="olymp-happy-face-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use></svg>
+								<svg class="olymp-happy-face-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use></svg>
 							</a>
 
 							<a href="#" class="btn btn-control bg-purple">
-								<svg class="olymp-chat---messages-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
+								<svg class="olymp-chat---messages-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
 							</a>
 
 							<div class="btn btn-control bg-primary more">
-								<svg class="olymp-settings-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-settings-icon"></use></svg>
+								<svg class="olymp-settings-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-settings-icon"></use></svg>
 
 								<ul class="more-dropdown more-with-triangle triangle-bottom-right">
 									<li>
@@ -78,7 +82,11 @@
 					</div>
 					<div class="top-header-author">
 						<a href="/account/{{profile.user.username}}" class="author-thumb">
+							{% if profile.image %}
 							<img src="{{profile.image.url}}" alt="author">
+							{% else %}
+							<img src="/media/svg-icons/sprites/icons.svg#little-delete" alt="author">
+							{% endif %}
 						</a>
 						<div class="author-content">
 							<a href="/account/{{profile.user.username}}" class="h4 author-name">{{profile.user.username}}</a>
