--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -1,62 +1,150 @@
 {% extends 'base.html' %}
-{% load activity_tags %}
 
 
-{% block head %}
-<h1>Account Home</h1>
-<ul>
-	<li><a href="">My Designs</a></li>
-	<li><a href="">My Activity Feed</a></li>
-	<li><a href="/account/edit">Edit My Profile</a></li>
-</ul>
-{% endblock %}
-
+<!-- BODY BLOCK -->
 {% block body %}
 
-	<h3> Hi {{ profile.user.first_name }}</h3>
-	{%if profile.image %}
-	<image src="{{ profile.image.url }}" style="max-width:240px">
-	{%endif%}
-	<p>Username: {{ profile.user.username }}</p>
-	<p>Full Name: {{ profile.user.first_name }} {{ profile.user.last_name }}</p>
-	<p>Email: {{ profile.user.email }}</p>
+{% include 'partials/headers-navigations/left-panel.html' %}
 
-	<p>City: {{ profile.city }}</p>
-	<p>Description: {{ profile.description }}</p>
+{% include 'partials/headers-navigations/left-panel-responsive.html' %}
 
-	{% if notifications %}
-	<h3>Notifications: </h3>
-	<ul>
-		{% for notification in notifications %}
-		<li>
-			{{notification}}
-		</li>
-		{% endfor %}
-	</ul>
-	{% endif %}
+{% include 'partials/headers-navigations/right-panel.html' %}
 
-	<h3>Your Feed</h3>
-	<ul>
-	{% for action in stream %}
-		<li>
-	    {% display_action action %}
-	    <p>{{ action.actor }} uploaded a new design titled {{ action.target.title }} </p>
-	    <img src="{{ action.target.image.url }}"/>
-	    <p>{{ action.target.description }}</p>
-	    <!-- TODO: Show comment box, and POST to /designview/id-->
-	    <a href="/design/view/{{action.target.id}}">Post a Comment</a>
-		</li>
-	{% endfor %}
-	</ul>
+{% include 'partials/headers-navigations/right-panel-responsive.html' %}
+
+{% include 'partials/headers-navigations/header-BP.html' %}
+
+{% include 'partials/headers-navigations/header-BP-responsive.html' %}
+
+<div class="header-spacer"></div>
 
 
+<div class="container">
+	<div class="row">
+
+		<!-- Main Content -->
+
+		<main class="col col-xl-6 order-xl-2 col-lg-12 order-lg-1 col-md-12 col-sm-12 col-12">
+
+			<div class="ui-block">
+				{% include 'partials/forms/news-feed-form.html' %}
+			</div>
+
+			<div id="newsfeed-items-grid">
+
+				<div class="ui-block">
+					{% include 'partials/posts/posts5-BP.html' %}
+				</div>
+
+				<div class="ui-block">
+
+					{% include 'partials/posts/posts6-BP.html' %}
+					{% include 'partials/comments/comment-list2.html' %}
+
+					<a href="#" class="more-comments">View more comments <span>+</span></a>
+
+					{% include 'partials/forms/comment-form.html' %}
+
+				</div>
+
+				<div class="ui-block">
+					{% include 'partials/posts/posts7-BP.html' %}
+				</div>
+
+				<div class="ui-block">
+					{% include 'partials/posts/posts8-BP.html' %}
+				</div>
+
+				<div class="ui-block">
+					{% include 'partials/posts/posts9-BP.html' %}
+				</div>
+
+			</div>
+
+			<a id="load-more-button" href="#" class="btn btn-control btn-more" data-load-link="items-to-load.html" data-container="newsfeed-items-grid"><svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg></a>
+
+		</main>
+
+		<!-- ... end Main Content -->
 
 
-	<h3> Your Designs </h3>
-	{% for post in posts %}
-		<p>Posted: {{ post.uploaded_at }}
-		<img src="{{ post.image.url }}">
-		<p class="description"> Description: {{ post.description }} </p>
-	{%endfor%}
-	<a href="/design/upload">Upload A New Design</a>
+		<!-- Left Sidebar -->
+
+		<aside class="col col-xl-3 order-xl-1 col-lg-6 order-lg-2 col-md-6 col-sm-12 col-12">
+			<div class="ui-block">
+				{% include 'partials/widgets/w-weather.html' %}
+			</div>
+
+			<div class="ui-block">
+				{% include 'partials/widgets/w-calendar.html' %}
+			</div>
+
+			<div class="ui-block">
+				<div class="ui-block-title">
+					<h6 class="title">Pages You May Like</h6>
+					<a href="#" class="more"><svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg></a>
+				</div>
+
+				{% include 'partials/widgets/w-friend-pages-added.html' %}
+
+			</div>
+		</aside>
+
+		<!-- ... end Left Sidebar -->
+
+
+		<!-- Right Sidebar -->
+
+		<aside class="col col-xl-3 order-xl-3 col-lg-6 order-lg-3 col-md-6 col-sm-12 col-12">
+
+			<div class="ui-block">
+				{% include 'partials/widgets/w-birthsday-alert.html' %}
+			</div>
+
+			<div class="ui-block">
+				<div class="ui-block-title">
+					<h6 class="title">Friend Suggestions</h6>
+					<a href="#" class="more"><svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg></a>
+				</div>
+
+				{% include 'partials/widgets/w-friend-pages-added-suggestions.html' %}
+
+			</div>
+
+			<div class="ui-block">
+
+				<div class="ui-block-title">
+					<h6 class="title">Activity Feed</h6>
+					<a href="#" class="more"><svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg></a>
+				</div>
+
+				{% include 'partials/widgets/w-activity-feed.html' %}
+
+			</div>
+
+
+			<div class="ui-block">
+
+				{% include 'partials/widgets/w-action.html' %}
+
+			</div>
+
+		</aside>
+
+		<!-- ... end Right Sidebar -->
+
+	</div>
+</div>
+
+
+{% include 'partials/windows-popup/update-header-photo.html' %}
+
+{% include 'partials/windows-popup/choose-from-my-photo.html' %}
+
+{% include 'partials/back-to-top.html' %}
+
+{% include 'partials/windows-popup/window-chat-responsive.html' %}
+
+
+<!-- END BODY BLOCK -->
 {% endblock %}
