--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -1,13 +1,15 @@
 {% extends 'base.html' %}
+{% load activity_tags %}
+
 {% block body %}
 
-{% include 'partials/headers-navigations/left-panel.html' %}
+<!-- {% include 'partials/headers-navigations/left-panel.html' %}
 
 {% include 'partials/headers-navigations/left-panel-responsive.html' %}
 
 {% include 'partials/headers-navigations/right-panel.html' %}
 
-{% include 'partials/headers-navigations/right-panel-responsive.html' %}
+{% include 'partials/headers-navigations/right-panel-responsive.html' %} -->
 
 <div class="header-spacer"></div>
 
@@ -22,30 +24,33 @@
 		<!-- Main Content -->
 
 		<div class="col col-xl-6 order-xl-2 col-lg-12 order-lg-1 col-md-12 col-sm-12 col-12">
+			{% if stream %}
 			<div id="newsfeed-items-grid">
-
+				{% for action in stream %}
 				<div class="ui-block">
-					{% include 'partials/posts/posts1-BP.html' %}
+					<!-- action.actor .target .verb -->
+					{% if action.verb == "uploaded a design" %}
+						{% include 'partials/posts/designpost.html' %}
+					{% else %}
+					{%if action.verb == "posted a status" %}
+						{% include 'partials/posts/statuspost.html' %}
+					{% else %}
+						<p>This action contained an unknown verb. Probs a follow.</p>
+					{% endif %}
+					{% endif %}
+<!-- 					{% display_action action %} -->
 				</div>
-				<div class="ui-block">
-					{% include 'partials/posts/posts2-BP.html' %}
-				</div>
-				<div class="ui-block">
-					{% include 'partials/posts/posts3-BP.html' %}
-					{% include 'partials/comments/comment-list1.html' %}
-					<a href="#" class="more-comments">View more comments <span>+</span></a>
-					{% include 'partials/forms/comment-form.html' %}
-				</div>
-				<div class="ui-block">
-					{% include 'partials/posts/posts4-BP.html' %}
-				</div>
+				{% endfor %}
 			</div>
 
 			<a id="load-more-button" href="#" class="btn btn-control btn-more" data-load-link="items-to-load.html" data-container="newsfeed-items-grid">
 				<svg class="olymp-three-dots-icon">
-					<use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use>
+					<use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use>
 				</svg>
 			</a>
+			{% else %}
+			<h3>{{profile.user.username}} hasn't posted yet!</h3>
+			{% endif %}
 		</div>
 
 		<!-- ... end Main Content -->
