--- a/account/templates/partials/headers-navigations/header-BP.html
+++ b/account/templates/partials/headers-navigations/header-BP.html
@@ -142,8 +142,12 @@
 
 			<div class="author-page author vcard inline-items more">
 				<div class="author-thumb">
-					<img alt="author" style="max-height: 40px" src="{{user.profile_user.image.url}}" class="avatar">
-					<span class="icon-status online"></span>
+					{% if profile.image %}
+					<img src="{{profile.image.url}}" class="header-profile-image" alt="author">
+					{% else %}
+					<img src="/media/svg-icons/sprites/icons.svg#little-delete" alt="author">
+					{% endif %}
+					<!-- <span class="icon-status online"></span> -->
 					<div class="more-dropdown more-with-triangle">
 						<div class="mCustomScrollbar" data-mcs-theme="dark">
 							<div class="ui-block-title ui-block-title-small">
