--- a/account/templates/partials/forms/news-feed-form.html
+++ b/account/templates/partials/forms/news-feed-form.html
@@ -7,7 +7,7 @@
 		<li class="nav-item">
 			<a class="nav-link active inline-items" data-toggle="tab" href="#home-1" role="tab" aria-expanded="true">
 
-				<svg class="olymp-status-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-status-icon"></use></svg>
+				<svg class="olymp-status-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-status-icon"></use></svg>
 
 				<span>Status</span>
 			</a>
@@ -15,7 +15,7 @@
 		<li class="nav-item">
 			<a class="nav-link inline-items" data-toggle="tab" href="#profile-1" role="tab" aria-expanded="false">
 
-				<svg class="olymp-multimedia-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-multimedia-icon"></use></svg>
+				<svg class="olymp-multimedia-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-multimedia-icon"></use></svg>
 
 				<span>Multimedia</span>
 			</a>
@@ -23,7 +23,7 @@
 
 		<li class="nav-item">
 			<a class="nav-link inline-items" data-toggle="tab" href="#blog" role="tab" aria-expanded="false">
-				<svg class="olymp-blog-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-blog-icon"></use></svg>
+				<svg class="olymp-blog-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-blog-icon"></use></svg>
 
 				<span>Blog Post</span>
 			</a>
@@ -33,24 +33,29 @@
 	<!-- Tab panes -->
 	<div class="tab-content">
 		<div class="tab-pane active" id="home-1" role="tabpanel" aria-expanded="true">
-			<form>
+			<form method="post">
 				<div class="author-thumb">
-					<img src="img/author-page.jpg" alt="author">
+					{% if profile.image %}
+					<img class="post-thumb" src="{{profile.image.url}}" alt="{{profile.user.username}}">
+					{% else %}
+					<!--TODO: GET DEFAULT PROFILE IMAGE (and do it better than this)-->
+					<img src="" alt="{{profile.user.username}}">
+					{% endif %}
 				</div>
 				<div class="form-group with-icon label-floating is-empty">
-					<label class="control-label">Share what you are thinking here...</label>
-					<textarea class="form-control" placeholder=""></textarea>
+					{% csrf_token %}
+					{{ statusform.as_p }}
 				</div>
 				<div class="add-options-message">
 					<a href="#" class="options-message" data-toggle="tooltip" data-placement="top"   data-original-title="ADD PHOTOS">
-						<svg class="olymp-camera-icon" data-toggle="modal" data-target="#update-header-photo"><use xlink:href="svg-icons/sprites/icons.svg#olymp-camera-icon"></use></svg>
+						<svg class="olymp-camera-icon" data-toggle="modal" data-target="#update-header-photo"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-camera-icon"></use></svg>
 					</a>
 					<a href="#" class="options-message" data-toggle="tooltip" data-placement="top"   data-original-title="TAG YOUR FRIENDS">
-						<svg class="olymp-computer-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-computer-icon"></use></svg>
+						<svg class="olymp-computer-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-computer-icon"></use></svg>
 					</a>
 
 					<a href="#" class="options-message" data-toggle="tooltip" data-placement="top"   data-original-title="ADD LOCATION">
-						<svg class="olymp-small-pin-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-small-pin-icon"></use></svg>
+						<svg class="olymp-small-pin-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-small-pin-icon"></use></svg>
 					</a>
 
 					<button class="btn btn-primary btn-md-2">Post Status</button>
@@ -62,27 +67,61 @@
 		</div>
 
 		<div class="tab-pane" id="profile-1" role="tabpanel" aria-expanded="true">
-			<form>
+			<form method="post" enctype="multipart/form-data">
 				<div class="author-thumb">
-					<img src="img/author-page.jpg" alt="author">
+					{% if profile.image %}
+					<img  class="post-thumb" src="{{profile.image.url}}" alt="{{profile.user.username}}">
+					{% else %}
+					<img src="" alt="{{profile.user.username}}">
+					{% endif %}				
 				</div>
 				<div class="form-group with-icon label-floating is-empty">
-					<label class="control-label">Share what you are thinking here...</label>
-					<textarea class="form-control" placeholder=""  ></textarea>
+					<!-- <label class="control-label">Multimedia Tab!! Upload form here?</label>
+					<textarea class="form-control" placeholder=""  ></textarea> -->
+					<!-- {{ designform.as_p }} -->
 				</div>
+
+
+
+
+  					{%csrf_token%}
+                    {% for error in designform.non_field_errors %}
+                    <div class="form-group has-errors text-danger small">
+                        {{error}}
+                    </div>
+                    {% endfor %}
+                    {% for field in designform %}
+                    <div class="form-group has-errors text-danger small">
+                        {{field.errors}}
+                    </div>
+                    <div class="form-group has-errors text-danger small">
+                    </div>
+                    <div class="form-group">
+                    	{{field.label}}
+                        {{field}}
+                    </div>
+                    {% endfor %}
+
+
+
+
+
+
+
+
 				<div class="add-options-message">
 					<a href="#" class="options-message" data-toggle="tooltip" data-placement="top"   data-original-title="ADD PHOTOS">
-						<svg class="olymp-camera-icon" data-toggle="modal" data-target="#update-header-photo"><use xlink:href="svg-icons/sprites/icons.svg#olymp-camera-icon"></use></svg>
+						<svg class="olymp-camera-icon" data-toggle="modal" data-target="#update-header-photo"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-camera-icon"></use></svg>
 					</a>
 					<a href="#" class="options-message" data-toggle="tooltip" data-placement="top"   data-original-title="TAG YOUR FRIENDS">
-						<svg class="olymp-computer-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-computer-icon"></use></svg>
+						<svg class="olymp-computer-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-computer-icon"></use></svg>
 					</a>
 
 					<a href="#" class="options-message" data-toggle="tooltip" data-placement="top"   data-original-title="ADD LOCATION">
-						<svg class="olymp-small-pin-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-small-pin-icon"></use></svg>
+						<svg class="olymp-small-pin-icon"><use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-small-pin-icon"></use></svg>
 					</a>
 
-					<button class="btn btn-primary btn-md-2">Post Status</button>
+					<button class="btn btn-primary btn-md-2">Upload Design</button>
 					<button   class="btn btn-md-2 btn-border-think btn-transparent c-grey">Preview</button>
 
 				</div>
@@ -90,34 +129,6 @@
 			</form>
 		</div>
 
-		<div class="tab-pane" id="blog" role="tabpanel" aria-expanded="true">
-			<form>
-				<div class="author-thumb">
-					<img src="img/author-page.jpg" alt="author">
-				</div>
-				<div class="form-group with-icon label-floating is-empty">
-					<label class="control-label">Share what you are thinking here...</label>
-					<textarea class="form-control" placeholder=""  ></textarea>
-				</div>
-				<div class="add-options-message">
-					<a href="#" class="options-message" data-toggle="tooltip" data-placement="top"   data-original-title="ADD PHOTOS">
-						<svg class="olymp-camera-icon" data-toggle="modal" data-target="#update-header-photo"><use xlink:href="svg-icons/sprites/icons.svg#olymp-camera-icon"></use></svg>
-					</a>
-					<a href="#" class="options-message" data-toggle="tooltip" data-placement="top"   data-original-title="TAG YOUR FRIENDS">
-						<svg class="olymp-computer-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-computer-icon"></use></svg>
-					</a>
-
-					<a href="#" class="options-message" data-toggle="tooltip" data-placement="top"   data-original-title="ADD LOCATION">
-						<svg class="olymp-small-pin-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-small-pin-icon"></use></svg>
-					</a>
-
-					<button class="btn btn-primary btn-md-2">Post Status</button>
-					<button   class="btn btn-md-2 btn-border-think btn-transparent c-grey">Preview</button>
-
-				</div>
-
-			</form>
-		</div>
 	</div>
 </div>
 
