--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load activity_tags %}
 
 <!-- BODY BLOCK -->
 {% block body %}
@@ -16,7 +16,6 @@
 
 {% include 'partials/headers-navigations/header-BP-responsive.html' %}
 
-<div class="header-spacer"></div>
 
 
 <div class="container">
@@ -32,36 +31,34 @@
 
 			<div id="newsfeed-items-grid">
 
+			{% if stream %}
+			<div id="newsfeed-items-grid">
+				{% for action in stream %}
 				<div class="ui-block">
-					{% include 'partials/posts/posts5-BP.html' %}
+					<!-- action.actor .target .verb -->
+					{% if action.verb == "uploaded a design" %}
+						{% include 'partials/posts/designpost.html' %}
+					{% else %}
+					{% if action.verb == "posted a status" %}
+						{% include 'partials/posts/statuspost.html' %}
+					{% else %}
+						<p>This action contained an unknown verb. Probs a follow.</p>
+					{% endif %}
+					{% endif %}
+<!-- 					{% display_action action %} -->
 				</div>
-
-				<div class="ui-block">
-
-					{% include 'partials/posts/posts6-BP.html' %}
-					{% include 'partials/comments/comment-list2.html' %}
-
-					<a href="#" class="more-comments">View more comments <span>+</span></a>
-
-					{% include 'partials/forms/comment-form.html' %}
-
-				</div>
-
-				<div class="ui-block">
-					{% include 'partials/posts/posts7-BP.html' %}
-				</div>
-
-				<div class="ui-block">
-					{% include 'partials/posts/posts8-BP.html' %}
-				</div>
-
-				<div class="ui-block">
-					{% include 'partials/posts/posts9-BP.html' %}
-				</div>
-
+				{% endfor %}
 			</div>
 
-			<a id="load-more-button" href="#" class="btn btn-control btn-more" data-load-link="items-to-load.html" data-container="newsfeed-items-grid"><svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg></a>
+			<a id="load-more-button" href="#" class="btn btn-control btn-more" data-load-link="items-to-load.html" data-container="newsfeed-items-grid">
+				<svg class="olymp-three-dots-icon">
+					<use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use>
+				</svg>
+			</a>
+			{% else %}
+			<h3>Nothing to see here yet! Go follow some designers!</h3>
+			{% endif %}
+			</div>
 
 		</main>
 
