--- a/static/css/app.css
+++ b/static/css/app.css
@@ -3,6 +3,11 @@ img {
 	max-height: 100%
 }
 
+img.post-thumb {
+	max-height: 40px;
+	max-width: 40px;
+}
+
 img.header-profile-image {
 	max-height: 40px;
 }
