--- a/account/templates/partials/forms/comment-form.html
+++ b/account/templates/partials/forms/comment-form.html
@@ -1,26 +1,26 @@
 
 <!-- Comment Form  -->
 
-<form class="comment-form inline-items">
+<form class="comment-form inline-items" target-id="{{action.target.pk}}">
 
 	<div class="post__author author vcard inline-items">
-		<img src="img/author-page.jpg" alt="author">
+		<img src="{{user.profile_user.image.url}}" alt="{{user.username}}">
 
 		<div class="form-group with-icon-right ">
 			<textarea class="form-control" placeholder=""></textarea>
 			<div class="add-options-message">
 				<a href="#" class="options-message" data-toggle="modal" data-target="#update-header-photo">
 					<svg class="olymp-camera-icon">
-						<use xlink:href="svg-icons/sprites/icons.svg#olymp-camera-icon"></use>
+						<use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-camera-icon"></use>
 					</svg>
 				</a>
 			</div>
 		</div>
 	</div>
 
-	<button class="btn btn-md-2 btn-primary">Post Comment</button>
+	<button id="postcomment" class="btn btn-md-2 btn-primary">Post Comment</button>
 
-	<button class="btn btn-md-2 btn-border-think c-grey btn-transparent custom-color">Cancel</button>
+	<button id="cancelcomment" class="btn btn-md-2 btn-border-think c-grey btn-transparent custom-color">Cancel</button>
 
 </form>
 
