--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -73,7 +73,8 @@
 
 
 	{% endblock %}
-
+</head>
+<body>
 	{% block body %}
 
 
@@ -128,7 +129,7 @@
 <script src="{% static 'js/jquery.gifplayer.js' %}"></script>
 <script src="{% static 'js/mediaelement-and-player.js' %}"></script>
 <script src="{% static 'js/mediaelement-playlist-plugin.min.js' %}"></script>
-<script src="{% static 'js/sticky-sidebar.js'}"></script>
+<script src="{% static 'js/sticky-sidebar.js' %}"></script>
 
 <script src="{% static 'js/base-init.js' %}"></script>
 <script defer src="{% static 'fonts/fontawesome-all.js' %}"></script>
