--- a/account/templates/partials/forms/comment-form.html
+++ b/account/templates/partials/forms/comment-form.html
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 
-	<button id="postcomment" class="btn btn-md-2 btn-primary">Post Comment</button>
+	<button class="btn btn-md-2 btn-primary post-comment">Post Comment</button>
 
 	<button id="cancelcomment" class="btn btn-md-2 btn-border-think c-grey btn-transparent custom-color">Cancel</button>
 
