--- a/account/templates/partials/headers-navigations/header-landing.html
+++ b/account/templates/partials/headers-navigations/header-landing.html
@@ -7,8 +7,8 @@
 
 			<a href="#" class="logo">
 				<div class="img-wrap">
-					<img src="img/logo.png" alt="Olympus">
-					<img src="img/logo-colored-small.png" alt="Olympus" class="logo-colored">
+					<img src="media/img/logo.png" alt="Olympus">
+					<img src="media/img/logo-colored-small.png" alt="Olympus" class="logo-colored">
 				</div>
 				<div class="title-block">
 					<h6 class="logo-title">olympus</h6>
@@ -104,7 +104,7 @@
 								<ul>
 									<li class="cart-product-item">
 										<div class="product-thumb">
-											<img src="img/product1.png" alt="product">
+											<img src="media/img/product1.png" alt="product">
 										</div>
 										<div class="product-content">
 											<h6 class="title">White Enamel Mug</h6>
@@ -135,7 +135,7 @@
 									</li>
 									<li class="cart-product-item">
 										<div class="product-thumb">
-											<img src="img/product2.png" alt="product">
+											<img src="media/img/product2.png" alt="product">
 										</div>
 										<div class="product-content">
 											<h6 class="title">Olympus Orange Shirt</h6>
