--- a/static/css/app.css
+++ b/static/css/app.css
@@ -11,3 +11,13 @@ img.post-thumb {
 img.header-profile-image {
 	max-height: 40px;
 }
+
+.login-form {
+	border: 1px solid #e6ecf5;
+	border-radius: 5px;
+	background-color: #fff;
+	overflow: hidden;
+	position: relative;
+	padding-left: 71px;
+	margin-bottom: 20px;
+}
